--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -37,6 +37,8 @@ jobs:
  
 
     - name: Push to public repo
+      permissions:
+        contents: write
       run: |
         git push public main --force
       env:
