--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -15,18 +15,17 @@ jobs:
       with:
         repository: aleskucera/private-repo
         token: ${{ secrets.PUBLIC_REPO_TOKEN }}
+
+    - name: Add public repo remote
+      run: |
+        git remote add public https://github.com/aleskucera/public-repo.git
+        git remote -v  # Debug: List remotes
     
-    - name: git push changes
-      uses: appleboy/git-push-action@v0.0.2
-      with:
-        author_email: kuceral4@fel.cvut.cz
-        author_name: Bot
-        branch: main
-        commit: true
-        force: true
-        commit_message: "[skip ci] Updated changes by gitea bot"
-        remote: git@github.com:aleskucera/public-repo.git
-        ssh_key: ${{ secrets.DEPLOY_KEY }}
+    - name: Force push to public repo
+      run: |
+        git push public main --force
+      env:
+        GITHUB_TOKEN: ${{ secrets.PUBLIC_REPO_TOKEN }}
 
  
 
